# migration

./: README.MD  deployments.py  flow.py  pyproject.toml
.github/workflows/: dev.yml
ways-of-the-old/: flow.py
ways-of-the-old/workflows/: prod.yml
