[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["jeanluciano <jeanluciano@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.9"
prefect = ">=2.0b"
greenlet = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
